small fixto fit header bar better on tablet screens

--- a/web/src/components/header.module.css
+++ b/web/src/components/header.module.css
@@ -97,6 +97,12 @@
     }
 
     @nest & ul li:not(:last-child) {
+      margin-right: 4rem;
+    }
+  }
+
+  @media (--media-min-large) {
+    @nest & ul li:not(:last-child) {
       margin-right: 14rem;
     }
   }
